k8s/rssmerge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rssmerge
  labels:
    app: rssmerge
  namespace: rssmerge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rssmerge
  template:
    metadata:
      labels:
        app: rssmerge
    spec:
      containers:
      - name: web
        image: charlieegan3/rssmerge:842378808aa0ebe4c1db4c1b36173fda
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "50m"
          requests:
            cpu: "50m"
