k8s/rssmerge/service.yaml
---
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: rssmerge
  namespace: rssmerge
spec:
  template:
    spec:
      containers:
      - image: "docker.io/charlieegan3/rssmerge:842378808aa0ebe4c1db4c1b36173fda"
        ports:
        - name: http1
          containerPort: 3000
        resources:
          limits:
            cpu: "50m"
          requests:
            cpu: "50m"
